[gd_scene load_steps=4 format=3 uid="uid://5rcat03yul3a"]

[ext_resource type="Theme" uid="uid://cu2qx6gk2hspu" path="res://assets/UI/iu_button.tres" id="1_323cg"]
[ext_resource type="Script" uid="uid://bf44jrhssahaj" path="res://scripts/button.gd" id="2_0qnuh"]
[ext_resource type="Texture2D" uid="uid://c27c6s31w1cw7" path="res://assets/UI/Button.png" id="3_0qnuh"]

[node name="Button" type="Button"]
offset_right = 98.0
offset_bottom = 44.0
pivot_offset = Vector2(49, 22)
theme = ExtResource("1_323cg")
script = ExtResource("2_0qnuh")

[node name="Button" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(48, 18)
texture = ExtResource("3_0qnuh")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="mouseEntered"]
[connection signal="mouse_exited" from="." to="." method="mouseExited"]
[connection signal="pressed" from="." to="." method="onPressed"]
